2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/Shipping_Advice__c.object-meta.xml
<CustomObject>
    <label>Shipping Advice</label>
    <nameField>
        <displayFormat>SA{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Shipping Advice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Advices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>