2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>