2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Connecting_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Flight_No__c</fullName>
    <label>Connecting Flight No.</label>
    <length>35</length>
    <type>Text</type>
</CustomField>