2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Consignee__c.field-meta.xml
<CustomField>
    <fullName>Consignee__c</fullName>
    <label>Consignee</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>