2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <label>Contact Person</label>
    <length>45</length>
    <type>Text</type>
</CustomField>