2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/container_no_seal_no__c.field-meta.xml
<CustomField>
    <fullName>container_no_seal_no__c</fullName>
    <inlineHelpText>For SEA only</inlineHelpText>
    <label>container no./seal no.</label>
    <length>90</length>
    <type>Text</type>
</CustomField>