2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Descriptions__c</fullName>
    <label>Descriptions</label>
    <type>TextArea</type>
</CustomField>