2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Destination_VAT_invoiced_toHK__c.field-meta.xml
<CustomField>
    <fullName>Destination_VAT_invoiced_toHK__c</fullName>
    <label>Destination VAT invoiced to</label>
    <type>TextArea</type>
</CustomField>