2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Destination_VAT_to__c.field-meta.xml
<CustomField>
    <fullName>Destination_VAT_to__c</fullName>
    <label>Destination VAT invoiced to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Helu-Trans (S) Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Helu-Trans (HK) Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Helu-Trans Artmove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>