2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <label>Packed Dimensions (cm)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>