2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Documents_Attached__c.field-meta.xml
<CustomField>
    <fullName>Documents_Attached__c</fullName>
    <label>Documents Attached</label>
    <type>TextArea</type>
</CustomField>