2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>Email</label>
    <type>Email</type>
</CustomField>