2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/ETA_Time_2L__c.field-meta.xml
<CustomField>
    <fullName>ETA_Time_2L__c</fullName>
    <label>ETA Time 2L</label>
    <length>9</length>
    <type>Text</type>
</CustomField>