2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/ETD_2L__c.field-meta.xml
<CustomField>
    <fullName>ETD_2L__c</fullName>
    <label>ETD 2L</label>
    <type>Date</type>
</CustomField>