2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/ETD_Time__c.field-meta.xml
<CustomField>
    <fullName>ETD_Time__c</fullName>
    <label>ETD (Time)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>