2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Flight_No__c</fullName>
    <label>Flight No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>