2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <defaultValue>&quot;KG&quot;</defaultValue>
    <label>Gross Weight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>