2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <defaultValue>&quot;Input the instructions from salesperson&quot;</defaultValue>
    <label>Instructions</label>
    <type>TextArea</type>
</CustomField>