2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <defaultValue>&quot;Please confirm shipment status.&quot;</defaultValue>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>