2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Notifying_Party__c.field-meta.xml
<CustomField>
    <fullName>Notifying_Party__c</fullName>
    <label>Notifying Party</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>