2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/OBL__c.field-meta.xml
<CustomField>
    <fullName>OBL__c</fullName>
    <label>OBL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>