2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shipping Advices</relationshipLabel>
    <relationshipName>Shipping_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>