2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Origin_Port__c.field-meta.xml
<CustomField>
    <fullName>Origin_Port__c</fullName>
    <label>Origin Port</label>
    <length>50</length>
    <type>Text</type>
</CustomField>