2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Our_charges__c.field-meta.xml
<CustomField>
    <fullName>Our_charges__c</fullName>
    <label>Our charges</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>are prepaid up to Port</fullName>
            </value>
            <value>
                <fullName>Please collect on behalf. Our invoice will be forwarded to you shortly.</fullName>
            </value>
            <value>
                <fullName>Door to Door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>