2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <label>Packages</label>
    <length>60</length>
    <type>Text</type>
</CustomField>