2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Shipper__c.field-meta.xml
<CustomField>
    <fullName>Shipper__c</fullName>
    <label>Shipper</label>
    <type>TextArea</type>
</CustomField>