2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>