2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Telephone_no_2__c.field-meta.xml
<CustomField>
    <fullName>Telephone_no_2__c</fullName>
    <label>Tel:</label>
    <type>Phone</type>
</CustomField>