2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Telephone_no__c.field-meta.xml
<CustomField>
    <fullName>Telephone_no__c</fullName>
    <label>Telephone no.</label>
    <type>Phone</type>
</CustomField>