2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Transit_insurance__c.field-meta.xml
<CustomField>
    <fullName>Transit_insurance__c</fullName>
    <label>Transit insurance covered by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>