2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Transit_insurance_covered_byHK__c.field-meta.xml
<CustomField>
    <fullName>Transit_insurance_covered_byHK__c</fullName>
    <label>Transit insurance covered by</label>
    <type>TextArea</type>
</CustomField>