2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Transit_Port__c.field-meta.xml
<CustomField>
    <fullName>Transit_Port__c</fullName>
    <label>Transit Port</label>
    <length>20</length>
    <type>Text</type>
</CustomField>