2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Vessel_Voyage_No__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Voyage_No__c</fullName>
    <label>Vessel / Voyage No.</label>
    <length>45</length>
    <type>Text</type>
</CustomField>