2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Advice__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <defaultValue>&quot;KG / CBM&quot;</defaultValue>
    <label>Volume</label>
    <length>10</length>
    <type>Text</type>
</CustomField>